<resources>
    <string name="app_name">TestNavbar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_diagnose">Diagnose</string>
    <string name="title_profile">Profile</string>
    <string name="title_fertilizer_calculator">Kalkukator\nPupuk</string>
    <string name="title_pest_disease"><![CDATA[Penyakit &\n Hama]]></string>
    <string name="title_cultivation_tips">Cultivation\nTIps</string>
    <string name="heading2_heal_your_plants">Sembuhkan Tanaman Kamu</string>
    <string name="scan_image">Scan\nGambar</string>
    <string name="title_see_diagnose">Lihat\nDiagnosis</string>
    <string name="title_medicine_recommendation">Rekomendasi\nObat</string>
    <string name="hallo">Hallo, Pak Tani\nSelamat Datang</string>
    <string name="title_humidity">Humidity</string>
    <string name="info_temperature">26.3°C</string>
    <string name="info_description_weather">Cuaca hangat dan berawan</string>
    <string name="humidity_percentage">61%</string>
    <string name="codes_farmer1">This is icon of farmer 1</string>
    <string name="codes_weather1">This is icon of weather 1</string>
    <string name="title_wind_speed">Wind Speed</string>
    <string name="wind_speed">2.37 m/s</string>
    <string name="title_pressure">Pressure</string>
    <string name="pressure">1021mb</string>
    <string name="button_scan_image">Ambil Gambar</string>
    <string name="codes_calculator">This is icon of fertilizer calculator</string>
    <string name="city">Jakarta, Indonesia</string>
    <string name="heading2_soon_feature">Soon Feature</string>
    <string name="humidity_info">%1$d%%</string>
    <string name="wind_speed_info">%1$.1f m/s</string>
    <string name="temperature_info">%1$.1f°C</string>
    <string name="pressure_info">%1$d hPa</string>
    <string name="city_country_info">%1$s, %2$s</string>
    <string name="no_internet">-</string>
    <string name="title_disease_name">Nama Penyakit</string>
    <string name="title_disease_symptoms">Gejala Penyakit</string>
    <string name="disease_description">Deskripsi</string>
    <string name="desc_diagnose_results">Based on the image you uploaded\\nThe analysis result of the image states that:\\n</string>
    <string name="definition_cancer">Cancer is a disease characterized by the uncontrolled growth and spread of abnormal cells in the body. Normally, cells grow, divide, and die in an orderly manner. However, cancerous cells continue to grow and divide instead of dying, forming masses of tissue called tumors. These tumors can invade nearby tissues and may spread to other parts of the body through the bloodstream or lymphatic system, a process known as metastasis.\\n\\nThere are many types of cancer, each named after the organ or cell type where it begins, such as lung cancer, breast cancer, and skin cancer. Cancer can develop due to genetic factors, lifestyle choices (like smoking or diet), environmental exposures (such as radiation or certain chemicals), or infections. The disease is often treated with surgery, radiation therapy, chemotherapy, immunotherapy, or a combination of these methods, depending on the type and stage of cancer. Early detection and treatment are key to improving the chances of survival.</string>
    <string name="desc_symptoms">Stem canker, leaf lesions, black rot, blight</string>
    <string name="desc_diagnose">Alternia is a genus that encompasses 299 species of fungi. They are considered to be one of at least 20% of yield loss. Alternaria fungi are known to affect a variety of vegetables, including carrots, pumpkins, potatoes, and tomatoes. Moreover, it infects citrus plants, roses, wheat, and tobacco. Most plants affected by these fungi develop stem canker, leaf lesions, black rot, leaf blight, and ringspot disease. Alternaria fungi don’t pose a threat to plants only- they also cause allergic reactions, hay fever, and asthma in humans.</string>
    <string name="desc_treatment">Berikut beberapa saran dan penanganannya :\nPotong dan buang daun atau bagian tanaman yang menunjukkan gejala infeksi seperti bercak coklat atau hitam yang berkembang menjadi cincin konsentris.\nBuang dedaunan yang gugur atau material tanaman yang terinfeksi di sekitar area penanaman. Jangan biarkan sisa tanaman yang terinfeksi menumpuk karena bisa menjadi sumber infeksi baru.</string>
    <string name="desc_medicine_reccomendation">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="button_add_to_favorite">Simpan Hasil</string>
    <string name="codes_result_image">This is the diagnosis result image</string>
    <string name="codes_arrow_back_result">Ini adalah tombol back dari activity result</string>
    <string name="title_diagnosis">Diagnosis</string>
    <string name="diagnosis_result_name">Alternaria</string>
    <string name="text_heading_diagnosis_description">Deskripsi Diagnosis</string>
    <string name="text_heading_treatment">Treatment</string>
    <string name="text_heading_medicine_recommendation">Rekomendasi Obat</string>
    <string name="title_symptoms">Gejala</string>
</resources>