<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <ImageView
                android:id="@+id/iv_diagnosis_result_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/disease"
                android:contentDescription="@string/codes_result_image"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                android:foreground="@drawable/shadow_overlay" />

            <ImageButton
                android:id="@+id/btn_back_result"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/baseline_arrow_back_ios_24"
                android:background="@null"
                android:scaleType="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/codes_arrow_back_result" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_diagnosis"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_marginBottom="56dp"
                android:layout_marginStart="20dp"
                android:layout_gravity="start|bottom"/>

            <TextView
                android:id="@+id/tv_diagnosis_result_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diagnosis_result_name"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginBottom="25dp"
                android:layout_marginStart="20dp"
                android:layout_gravity="start|bottom"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#C9DFDC"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_symptoms"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/result_label2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/vinilatest_condensedlight"
                    android:text="@string/desc_symptoms"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/TextContent.TitleMedium.Bold"
                android:layout_marginVertical="10dp"
                android:drawablePadding="8dp"
                android:text="@string/text_heading_diagnosis_description"
                app:drawableStartCompat="@drawable/mingcute_warning_line"/>

            <TextView
                android:id="@+id/tv_diagnosis_description"
                style="@style/TextContent.BodyMedium"
                android:layout_marginBottom="5dp"
                android:text="@string/desc_diagnose" />

            <TextView
                style="@style/TextContent.TitleMedium.Bold"
                android:layout_marginVertical="10dp"
                android:drawablePadding="8dp"
                android:text="@string/text_heading_treatment"
                android:contentDescription="@string/codes_farmer1"
                app:drawableStartCompat="@drawable/hugeicons_treatment" />

            <TextView
                android:id="@+id/tv_diagnosis_treatment"
                style="@style/TextContent.BodyMedium"
                android:layout_marginBottom="5dp"
                android:text="@string/desc_treatment" />

            <TextView
                style="@style/TextContent.TitleMedium.Bold"
                android:layout_marginVertical="10dp"
                android:drawablePadding="8dp"
                android:text="@string/text_heading_medicine_recommendation"
                android:contentDescription="@string/codes_farmer1"
                app:drawableStartCompat="@drawable/hugeicons_medicine_syrup"/>

            <TextView
                android:id="@+id/tv_medicine_recommendation"
                style="@style/TextContent.BodyMedium"
                android:layout_marginBottom="5dp"
                android:text="@string/desc_medicine_reccomendation" />

            <Button
                android:id="@+id/btn_add_to_favorite"
                style="@style/CustomButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/button_add_to_favorite" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
