<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="12dp"
    card_view:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_mediaCover"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:padding="5dp"
            android:src="@drawable/baseline_bookmark_24"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_author"
            style="@style/TextContent.BodySmall.Bold"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:padding="6dp"
            android:textColor="@color/white"
            android:text="@string/title_disease_name"
            android:background="@drawable/bg_circle_strong_cyan"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_title_name"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_title_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/vinilatest_bold"
            android:maxLines="2"
            android:text="@string/title_disease_symptoms"
            android:textColor="@color/white"
            android:textSize="20sp"
            card_view:layout_constraintBottom_toBottomOf="@id/iv_mediaCover"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="@+id/tv_author" />

        <TextView
            android:id="@+id/tv_descHeadlines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/vinilatest_condensedlight"
            android:maxLines="3"
            android:text="@string/disease_description"
            android:textSize="16sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="@+id/tv_title_name"
            card_view:layout_constraintTop_toBottomOf="@id/iv_mediaCover" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>